# Faces_Near

./: .gitignore  face.php  gallery.php  index.php  index2.php  myCollection.php  test.html
!#Help_Important/: contract_firstEx.rs  readme.txt
!#Help_Important/ContractFG/: Cargo.toml
!#Help_Important/ContractFG/neardev/: dev-account  dev-account.env
API/: FaceJSONStruct.php  InputDataClass.php  getDataDump.php  getDataForInputs.php  getFaceInfo.php  getFacesInfo.php  getFacesInfo2.php  makeFaceJSONStructObj.php
Contract/: Cargo.toml
MarketContarct/: Cargo.toml
PHP_SNIPPETS/: errorSnippet.php  face.php  footer.php  gallery.php  head.php  header.php  mainPageContent.php  myCollectionSnippet.php  popUp.php  usageOfLocalDumpInfoDiv.php
classes/: BackgroundClass.php  EyesClass.php  FaceClass.php  GeneratedFaceClass.php  HatClass.php  JeweleryClass.php  LipsClass.php  MaskClass.php  ShirtClass.php
core/: abstractErrorClass.php  abstractHistoryTableClass.php  abstractTableClass.php  dbAccessClass.php  global.php  oldDbAccessClass.php  randomSeq.php  sessionClass.php  settings.php
css/: footer.css  index.css  index.php  navBar.css  popUp.css
fg_web_php/: index.php
js/: dataBump.js  galleryPageHandler.js  getDataFromContract.js  getNearValue.js  internal.js  lib.rs  localDump.js  localDump_test.js  localForageSync.js  near_api.js  popUp.js  preload.js
scripts/: attrDataToUpload.csv  dataForMySql.csv  getDataDump.php  hashStat.csv  makeObj.php  maxPreviewHash.csv  midPreviewHash.csv  new attributes.csv  smallPreviewHash.csv  testScript.php  (+2 more)
(+30 files in other folders)
